syntax = "proto3";
package tron_messages;

// Tx message
message TransactionInfo Info {
  string Id = 1;
  int64 Fee = 2;
};

message TransactionResult {
  string Status = 1;
  string Message = 2;
};

message Receipt {
  string Result = 1;
  int64 EnergyPenaltyTotal = 2;
  int64 EnergyFee = 3;
  int64 EnergyUsageTotal = 4;
  int64 OriginEnergyUsage = 5;
  int64 NetUsage = 6;
  int64 NetFee = 7;
};

message Contract {
  repeated string ExecutionResults = 1;
  string Address = 2;
};

message Staking {
  int64 WithdrawAmount = 11;
  int64 UnfreezeAmount = 12;
  int64 WithdrawExpireAmount = 14;
  map<string, int64> CancelUnfreezeV2Amount = 15;
};

message Log {
  string Address = 1;
  string Data = 2;
  repeated string Topics = 3;
};

message InternalTransaction {
  string CallerAddress = 1;
  string Note = 2;
  string TransferToAddress = 3;
  repeated CallValueInfo CallValueInfos = 4;
  string Hash = 5;
};

message Transaction {
  TransactionInfo Info = 1;
  TransactionResult Result = 2;
  Receipt Receipt = 3;
  Contract Contract = 4;
  Staking Staking = 5;
  repeated Log Logs = 6;
  repeated InternalTransaction InternalTransactions = 7;
};

// Block message
message BlockHeader {
  RawData rawData = 1;
  string witness_signature = 2;
}

message RawData {
  int64 number = 1;
  string txTrieRoot = 2;
  string witness_address = 3;
  int64 witness_id = 4;
  string parentHash = 5;
  int32 version = 6;
  int64 timestamp = 7;
  string accountStateRoot = 8;
}

message Ret {
  string contractRet = 1;
}

message Value {
  int32 amount = 1;
  string owner_address = 2;
  string to_address = 3;
}

message Parameter {
  Value value = 1;
  string type_url = 2;
}

message Contract {
  Parameter parameter = 1;
  string type = 2;
}

message RawDataTransaction {
  repeated Contract contract = 1;
  string ref_block_bytes = 2;
  string ref_block_hash = 3;
  int64 expiration = 4;
  string data = 5;
  int64 fee_limit = 6;
  int64 timestamp = 7;
}

message Transaction {
  repeated Ret ret = 1;
  repeated string signature = 2;
  string txID = 3;
  RawDataTransaction raw_data = 4;
  string raw_data_hex = 5;
}

message Block {
  string blockID = 1;
  BlockHeader block_header = 2;
  repeated Transaction transactions = 3;
}
